--- a/integrationtest/aicurator/pom.xml
+++ b/integrationtest/aicurator/pom.xml
@@ -16,12 +16,13 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>21</java.version>
 
-		<spring-boot-starter-test.version>3.3.3</spring-boot-starter-test.version>
-		<cucumber.version>7.18.1</cucumber.version>
-		<selenium-java.version>4.23.1</selenium-java.version>
-		<lombok.version>1.18.34</lombok.version>
-		<jsoup.version>1.18.1</jsoup.version>
-		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+		<spring-boot-starter-test.version>3.4.3</spring-boot-starter-test.version>
+		<cucumber.version>7.21.1</cucumber.version>
+		<selenium-java.version>4.29.0</selenium-java.version>
+		<lombok.version>1.18.36</lombok.version>
+		<jsoup.version>1.19.1</jsoup.version>
+		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
+		<spring-ai-bom.version>1.0.0-M6</spring-ai-bom.version>
 	</properties>
 
 	<repositories>
@@ -53,7 +54,7 @@
 			<dependency>
 				<groupId>org.springframework.ai</groupId>
 				<artifactId>spring-ai-bom</artifactId>
-				<version>1.0.0-M3</version>
+				<version>${spring-ai-bom.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
