--- a/integrationtest/self-healing-integration-tests/pom.xml
+++ b/integrationtest/self-healing-integration-tests/pom.xml
@@ -15,14 +15,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>21</java.version>
-		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+		<maven-compiler-plugin.version>4.0.0-beta-2</maven-compiler-plugin.version>
 
 		<aicurator.version>1.0-SNAPSHOT</aicurator.version>
-		<webdrivermanager.version>5.9.2</webdrivermanager.version>
-		<restassured.version>5.4.0</restassured.version>
-		<javafaker.version>0.15</javafaker.version>
-		<healenium-web.version>3.5.3</healenium-web.version>
-		<github-api.version>1.326</github-api.version>
+		<webdrivermanager.version>6.0.0</webdrivermanager.version>
+		<restassured.version>5.5.1</restassured.version>
+		<javafaker.version>1.0.2</javafaker.version>
+		<healenium-web.version>3.5.4</healenium-web.version>
+		<github-api.version>1.327</github-api.version>
 	</properties>
 
 	<dependencies>
