--- a/integrationtest/self-healing-integration-tests/pom.xml
+++ b/integrationtest/self-healing-integration-tests/pom.xml
@@ -15,7 +15,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>21</java.version>
-		<maven-compiler-plugin.version>4.0.0-beta-2</maven-compiler-plugin.version>
+		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
 
 		<aicurator.version>1.0-SNAPSHOT</aicurator.version>
 		<webdrivermanager.version>6.0.0</webdrivermanager.version>
