--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,9 +1,9 @@
 # frontend/Dockerfile
-FROM node:18-alpine AS build
+FROM node:20-alpine AS build
 WORKDIR /app
-COPY package.json yarn.lock ./
-RUN yarn install
+COPY package.json package-lock.json ./
+RUN npm install
 COPY . .
-RUN yarn build
+RUN npm run build
 
-CMD ["yarn", "start"]
+CMD ["npm", "run start"]
