--- a/integrationtest/aicurator/pom.xml
+++ b/integrationtest/aicurator/pom.xml
@@ -18,36 +18,12 @@
 
 		<spring-boot-starter-test.version>3.4.3</spring-boot-starter-test.version>
 		<cucumber.version>7.21.1</cucumber.version>
-		<selenium-java.version>4.29.0</selenium-java.version>
-		<lombok.version>1.18.36</lombok.version>
-		<jsoup.version>1.19.1</jsoup.version>
-		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
-		<spring-ai-bom.version>1.0.0-M6</spring-ai-bom.version>
+		<selenium-java.version>4.38.0</selenium-java.version>
+		<lombok.version>1.18.42</lombok.version>
+		<jsoup.version>1.21.2</jsoup.version>
+		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
+		<spring-ai-bom.version>1.0.0</spring-ai-bom.version>
 	</properties>
-
-	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>spring-snapshots</id>
-			<name>Spring Snapshots</name>
-			<url>https://repo.spring.io/snapshot</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>maven_central</id>
-			<name>Maven Central</name>
-			<url>https://repo.maven.apache.org/maven2/</url>
-		</repository>
-	</repositories>
 
 	<dependencyManagement>
 		<dependencies>
@@ -92,13 +68,13 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-anthropic</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-anthropic-spring-boot-starter</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
+			<artifactId>spring-ai-starter-model-openai</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
