--- a/integrationtest/aicurator/pom.xml
+++ b/integrationtest/aicurator/pom.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+        <modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.dkeiss</groupId>
-	<artifactId>aicurator</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+        <parent>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>3.3.5</version>
+                <relativePath/>
+        </parent>
 
-	<name>AiCurator</name>
-	<description>Auto-healing and merge requests for integration tests based on Cucumber and Selenium.</description>
+        <groupId>de.dkeiss</groupId>
+        <artifactId>aicurator</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <packaging>jar</packaging>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>21</java.version>
+        <name>AiCurator</name>
+        <description>Auto-healing and merge requests for integration tests based on Cucumber and Selenium.</description>
 
-		<spring-boot-starter-test.version>3.4.3</spring-boot-starter-test.version>
-		<cucumber.version>7.21.1</cucumber.version>
-		<selenium-java.version>4.38.0</selenium-java.version>
-		<lombok.version>1.18.42</lombok.version>
-		<jsoup.version>1.21.2</jsoup.version>
-		<maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
-		<spring-ai-bom.version>1.0.0</spring-ai-bom.version>
-	</properties>
+        <properties>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+                <java.version>21</java.version>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.ai</groupId>
-				<artifactId>spring-ai-bom</artifactId>
-				<version>${spring-ai-bom.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+                <cucumber.version>7.21.1</cucumber.version>
+                <selenium-java.version>4.38.0</selenium-java.version>
+                <lombok.version>1.18.42</lombok.version>
+                <jsoup.version>1.21.2</jsoup.version>
+                <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
+                <spring-ai-bom.version>1.0.0</spring-ai-bom.version>
+        </properties>
+
+        <dependencyManagement>
+                <dependencies>
+                        <dependency>
+                                <groupId>org.springframework.ai</groupId>
+                                <artifactId>spring-ai-bom</artifactId>
+                                <version>${spring-ai-bom.version}</version>
+                                <type>pom</type>
+                                <scope>import</scope>
+                        </dependency>
+                </dependencies>
+        </dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -53,11 +59,10 @@
 			<artifactId>cucumber-spring</artifactId>
 			<version>${cucumber.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<version>${spring-boot-starter-test.version}</version>
-		</dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-test</artifactId>
+                </dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
